<resources>
    <string name="app_name">tarea1</string>
    <string name="tv_correo">Correo</string>
    <string name="tv_clave">Contraseña</string>
    <string name="msg_fallo_login">error al iniciar session</string>
    <string name="msg_fallo_registro">error al registrarse</string>
    <string name="title_activity_principal">Principal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="msg_imagen">Imagen de la cancion</string>
    <string name="msg_cancion">Nombre de la Cancion</string>
    <string name="msg_artista">Nombre del Artista</string>
    <string name="msg_album">Album</string>
    <string name="msg_año">Año de lanzamiento</string>

    <string name="bt_agregar">Agregar</string>

</resources>